test/bad/classes/type01.px

A = 1

func A() def
    skip
